...
        android:text="@string/instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookInput"
        android:inputType="text"
        android:hint="@string/input_hint"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:text="@string/button_text"
        android:onClick="searchBooks" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
...
